# memsy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: publish-clawhub-skills.yml  publish-hermes-plugin.yml  publish-openclaw-plugin.yml
docs/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
docs/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
docs/.next/cache/: config.json
docs/.next/diagnostics/: route-bundle-stats.json
docs/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
docs/.next/server/app/: _global-error.html  _global-error.rsc  _not-found.html  _not-found.rsc  docs.html  docs.rsc  index.html  llms-full.txt.body  llms.txt.body  page.js  page.js.nft.json  page_client-reference-manifest.js
docs/.next/server/chunks/: [root-of-the-server]__02lxbc.._.js  [root-of-the-server]__02lxbc.._.js.map  [root-of-the-server]__05qhhdr._.js  [root-of-the-server]__071f8t0._.js  [root-of-the-server]__071f8t0._.js.map  [root-of-the-server]__0ifeju0._.js  [root-of-the-server]__0ifeju0._.js.map  [root-of-the-server]__0yd046e._.js  [root-of-the-server]__0yd046e._.js.map  _0ae7j_n._.js  _0ae7j_n._.js.map  _0r7wqk8._.js  _0r7wqk8._.js.map  _next-internal_server_app_api_og_route_actions_0~s6zu1.js  node_modules_next_dist_compiled_0dmdp47._.js  node_modules_next_dist_compiled_0dmdp47._.js.map
docs/.next/static/chunks/: 0-abcr_h6uy_..js  053yo03md2tvp.js  05y6z~3dn2j9y.js  0871~h-_wqufc.js  0dx7iud.6o_~m.js  0hc1~f-bd8~mf.js  0k4-ugu914_9t.css  0ojic.02dx78o.js  0qxujai8nfek_.js  0wqstea2k9tcy.js  13xhd5hjrf_xf.js  turbopack-0wkjds18mervf.js
docs/.next/types/: routes.d.ts  validator.ts
docs/.source/: browser.ts  server.ts  source.config.mjs
docs/__tests__/: theme-config.test.ts
docs/app/: globals.css  layout.tsx
docs/app/api/og/: route.tsx
docs/app/components/docs/: docs-header.tsx  docs-sidebar.tsx  docs-tabs.tsx  mobile-sidebar.tsx  quick-links.tsx
docs/app/docs/: layout.tsx
docs/content/docs/: actors-and-sessions.mdx  async-client.mdx  async-memsy-client.mdx  async-processing.mdx  claude-code.mdx  codex.mdx  console-memories.mdx  error-handling.mdx  events-and-memories.mdx  exceptions.mdx  faq.mdx  hermes.mdx  index.mdx  ingesting-events.mdx  installation.mdx  langchain.mdx  mcp.mdx  memsy-client.mdx  meta.json  models.mdx  nanoclaw.mdx  onboarding.mdx  openclaw.mdx  quickstart.mdx  retries.mdx  searching-memory.mdx  signup.mdx  usage-and-rate-limits.mdx
docs/content/docs/reference/: meta.json
docs/lib/: docs-tabs.ts  page-icons.tsx  theme-config.ts
mcp/: README.md  package.json  tsconfig.json  tsup.config.ts
mcp/src/: config.ts  identity.ts  profiles.ts  server.ts
mcp/src/prompts/: index.ts
mcp/src/resources/: index.ts
mcp/src/tools/: _shared.ts  create_role.ts  create_team.ts  get_memory.ts  health.ts  index.ts  ingest.ts  list_memories.ts  list_orgs.ts  list_roles.ts  list_teams.ts  search.ts  set_defaults.ts  status.ts  use_org.ts
mcp/test/: config.test.ts  identity.test.ts  integration_harness.mjs  list_memories.test.ts  profiles.test.ts  resources.test.ts  set_defaults.test.ts
plugins/claude-code/: .mcp.json  CHANGELOG.md  PLAN.md  README.md  install.sh  package.json
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/agents/: memsy-archivist.md
plugins/claude-code/commands/: memsy-checkpoint.md  memsy-doctor.md  memsy-index.md  memsy-org.md  memsy-remember.md  memsy-setup.md  memsy.md
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/scripts/: post-response.sh  release.sh  session-start.sh  session_start.py
plugins/claude-code/tests/: identity-parity.sh
plugins/codex/: .mcp.json  AGENTS.md.snippet  CHANGELOG.md  README.md  install.sh  plugin.json
plugins/codex/hooks/: hooks.json  session-start.sh  session_start.py  stop.sh  turn_sync.py  user-prompt-submit.sh
plugins/hermes/: CHANGELOG.md  README.md  install.sh  pyproject.toml
plugins/hermes/memory_provider/: __init__.py  cli.py  plugin.yaml
plugins/hermes/memsy_hermes_plugin/: __init__.py  plugin.yaml
plugins/hermes/memsy_hermes_plugin/skills/memsy-recall/: SKILL.md
plugins/hermes/memsy_hermes_plugin/skills/memsy-remember/: SKILL.md
plugins/nanoclaw/: README.md  install.sh
plugins/nanoclaw/src/: memsy-sync.ts
plugins/openclaw/: CHANGELOG.md  README.md  install.sh  openclaw.plugin.json  package.json  tsconfig.json
plugins/openclaw/src/: index.ts
sdks/node/: README.md  package.json  tsconfig.json
sdks/node/scripts/: e2e.mjs
sdks/node/src/: client.ts  control.ts  errors.ts  http.ts  index.ts  models.ts
sdks/python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
sdks/python/memsy/: __init__.py  _http.py  async_client.py  async_control.py  client.py  control.py  exceptions.py  models.py
sdks/python/memsy/control_resources/: __init__.py  billing.py  events.py  interest.py  keys.py  usage.py
sdks/python/memsy/resources/: __init__.py  memories.py  orgs.py  roles.py  teams.py
sdks/python/scripts/: e2e.py
sdks/python/tests/: __init__.py  test_async_client.py  test_client.py  test_control_client.py  test_errors.py  test_models.py  test_resources.py  test_retry.py  test_usage_headers.py
(+219 files in other folders)
