[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memsy-hermes-plugin"
version = "0.1.0"
description = "Memsy long-term memory plugin for Hermes Agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["memsy", "hermes", "memory", "recall", "long-term-memory", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://memsy.io/docs/hermes"
Repository = "https://github.com/memsy-io/memsy"
Documentation = "https://memsy.io/docs/hermes"

[project.entry-points."hermes_agent.plugins"]
memsy = "memsy_hermes_plugin"

[tool.hatch.build.targets.wheel]
packages = ["memsy_hermes_plugin"]

[tool.hatch.build.targets.wheel.shared-data]
# Ensure plugin.yaml and skills are included in the wheel
"memsy_hermes_plugin/plugin.yaml" = "memsy_hermes_plugin/plugin.yaml"
