[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memsy"
version = "0.3.1"
description = "Official Python SDK for the Memsy memory service"
requires-python = ">=3.10"
authors = [
    { name = "memsy", email = "gaurav@memsy.io" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["memsy", "memory", "ai", "sdk", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://app.memsy.io"
Documentation = "https://docs.memsy.io"
Source = "https://github.com/memsy-io/memsy"
"Bug Tracker" = "https://github.com/memsy-io/memsy/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "anyio[trio]>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["memsy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
